# unreleased

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  justfile
.github/workflows/: audit.yml  main.yml  pr.yml  publish-crates.yml  release.yml
src/: auth.rs  cli.rs  config.rs  main.rs
src/domain/: commit.rs  config.rs  log.rs  mod.rs  release.rs  repo.rs
src/service/: execute.rs  log.rs  mod.rs  release.rs  result.rs
src/view/: date.rs  html.rs  mod.rs  output.rs  stdout.rs  testdata.rs
src/view/assets/: template.html
src/view/snapshots/: unreleased__view__html__tests__built_in_html_template_is_rendered_correctly.snap  unreleased__view__html__tests__custom_html_template_is_rendered_correctly.snap  unreleased__view__html__tests__html_table_with_not_applicable_state_renders_correctly.snap
tests/: report_test.rs  root_test.rs  run_test.rs
tests/assets/: invalid-data.toml  invalid-schema.toml  invalid-toml.toml  valid-config.toml
tests/common/: mod.rs
