[package]
name = "unreleased"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/unreleased"
description = "see the commits to your GitHub repos since their last release"
homepage = "https://github.com/dhth/unreleased"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
etcetera = "0.11.0"
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.8", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
