[package]
name = "unreleased"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/unreleased"
description = "view the commits to your GitHub repos since their last release"
homepage = "https://tools.dhruvs.space/unreleased"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
comfy-table = "7.2.2"
etcetera = "0.11.0"
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.11", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.46.2", features = ["yaml"] }
insta-cmd = "0.6.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
